--- a/book_tracker/templates/signup.html
+++ b/book_tracker/templates/signup.html
@@ -11,4 +11,5 @@
             {% endfor %}
             <button type="submit">Sign Up</button>
         </form>
+    <p>Already have an account?</p>
     {% endblock %}
