added profile app, some frontend

--- a/book_tracker/templates/home.html
+++ b/book_tracker/templates/home.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 
+    {% block head %}
+        <title>Homepage</title>
+    {% endblock %}
+
     {% block content %}
-        <h1>homepage</h1>
+        <h1 class="roboto-text">homepage</h1>
     {% endblock %}
