--- a/book_tracker/templates/signout.html
+++ b/book_tracker/templates/signout.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 
-{% block content %}
-    <h1>logged out successfully</h1>
-{% endblock %}
+    {% block head %}
+        <title>Sign Out</title>
+    {% endblock %}
+
+    {% block content %}
+        <h1 class="roboto-text">You have been successfully signed out. <br> Come visit us again sometime!</h1>
+    {% endblock %}
