--- a/book_tracker/templates/base.html
+++ b/book_tracker/templates/base.html
@@ -4,8 +4,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>book_tracking</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'main.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'users.css' %}">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Karla|Roboto+Mono&display=swap" rel="stylesheet">
+    {% block head %}
+    {% endblock %}
 </head>
 <body>
     {% block content %}
