--- a/book_tracker/templates/signin.html
+++ b/book_tracker/templates/signin.html
@@ -1,15 +1,21 @@
 {% extends 'base.html' %}
 
-{% block content %}
-<h2>Sign In</h2>
-<form method="post">
-    {% csrf_token %}
-    {% for field in form %}
-        <p>
-            {{ field.label_tag }} <br>
-            {{ field }}
-        </p>
-    {% endfor %}
-    <button type="submit">Sign In</button>
-</form>
-{% endblock %}
+    {% block head %}
+        <title>Sign In</title>
+    {% endblock %}
+
+    {% block content %}
+        <div class="form-container">
+            <h2 class="roboto-text">Welcome back!</h2>
+            <form method="post">
+                {% csrf_token %}
+                {% for field in form %}
+                    <p class="karla-text">
+                        {{ field.label_tag }} <br>
+                        {{ field }}
+                    </p>
+                {% endfor %}
+                <button type="submit">Sign In</button>
+            </form>
+        </div>
+    {% endblock %}
