--- a/book_tracker/templates/profile.html
+++ b/book_tracker/templates/profile.html
@@ -5,7 +5,20 @@
 {% endblock %}
 
 {% block content %}
-    <p>{{ user }}'s profile</p>
-
-    <p>firstname: {{user.userprofile.first_name}}</p>
+    <h2>{{ user }}'s profile</h2>
+    <p>First Name: {{ user.first_name }}</p>
+    <p>Last Name: {{ user.last_name }}</p>
+    {% if not user.userprofile.hide_email %}
+        <p>Email: {{ user.email }}</p>
+    {% endif %}
+    <p>Date Joined: {{ user.date_joined | date:'F d Y' }}</p>
+    <p>From: {{user.userprofile.location}}</p>
+    <p>Website: {{user.userprofile.website}}</p>
+    <p>About: {{user.userprofile.about}}</p>
+    <form action="edit">
+        <button>Edit Profile</button>
+    </form>
+    <form action="change_password">
+        <button>Change Password</button>
+    </form>
 {% endblock %}
