--- a/book_tracker/templates/signup.html
+++ b/book_tracker/templates/signup.html
@@ -1,20 +1,29 @@
-{% extends 'base.html' %}
+{%extends 'base.html'%}
 
-    {% block head %}
-        <title>Sign Up</title>
-    {% endblock %}
+{%block head%}
+    <title>Sign Up</title>
+{%endblock%}
 
-    {% block content %}
+{%block content%}
+    <div class="container">
+    <div class="form-sign">
         <h2 class="roboto-text">Join Us!</h2>
         <form method="post">
-            {% csrf_token %}
-            {% for field in form %}
-            <p class="karla-text">
-                {{ field.label_tag }}<br>
-                {{field}}
-            </p>
-            {% endfor %}
+            {%csrf_token%}
+            {%if form.errors%}
+                {%for key,value in form.errors.items%}
+                    <div class="error-cont"><small class="roboto-text">{{value}}</small></div>
+                {%endfor%}
+            {%endif%}
+            {%for field in form%}
+                <p>
+                    <label class="karla-text">{{field.label}}</label><br>
+                    {{field}}
+                </p>
+            {%endfor%}
             <button type="submit">Sign Up</button>
         </form>
-    <p>Already have an account?</p>
-    {% endblock %}
+        <p id="redirect" class="roboto-text">Already have an account? <br> <a href="{% url 'signin' %}">Sign In!</a></p>
+    </div>
+    </div>
+{%endblock%}
