--- a/book_tracker/templates/books/display_books.html
+++ b/book_tracker/templates/books/display_books.html
@@ -7,7 +7,7 @@
 {%block content%}
     <ul>
         {%for book in books%}
-            <a href="{%url 'view_book' book.id%}"><li>{{book}}</li></a>
+            <a href="{%url 'view_book' book.slug%}"><li>{{book}}</li></a>
         {%endfor%}
     </ul>
 {%endblock%}
