--- a/book_tracker/templates/profile/profile.html
+++ b/book_tracker/templates/profile/profile.html
@@ -28,5 +28,6 @@
                 <button>Change Password</button>
             </form>
         </div>
+        <a href="{%url 'view_log'%}">View Reading Log</a>
     </div>
 {% endblock %}
