--- a/book_tracker/templates/books/view_book.html
+++ b/book_tracker/templates/books/view_book.html
@@ -5,7 +5,14 @@
 {%endblock%}
 
 {%block content%}
-    <p>{{book}}</p>
+    <p>{{book.title}}</p>
+    <p>{{book.description}}</p>
+    <p>{{book.get_genre_display}}</p>
+    <p> Written by
+        {%for author in authors%}
+            <a href="{%url 'view_author' author.slug%}">{{author}}</a>
+        {%endfor%}
+    </p>
     <a href="{%url 'add_to_log' book.slug%}">Add to Your Log</a>
     <a href="{%url 'add_review' book.slug%}">Write Review</a>
 {%endblock%}
