--- a/book_tracker/templates/home.html
+++ b/book_tracker/templates/home.html
@@ -13,6 +13,7 @@
                 <ul>
                     <li class="karla-text"><a href="{%url 'profile'%}">Profile</a></li>
                     <li class="karla-text"><a href="{%url 'signout'%}">Sign Out</a></li>
+                    <li class="karla-text"><a href="{%url 'display_books'%}">Browse Books</a></li>
                 </ul>
             </nav>
         </section>
