--- a/book_tracker/templates/reading_log/view_log.html
+++ b/book_tracker/templates/reading_log/view_log.html
@@ -9,6 +9,7 @@
         <p>
             {{log.book}} <br>
             {{log.get_status_display}}
+            <button type="submit">Delete</button>
         </p>
     {%endfor%}
 {%endblock%}
