--- a/book_tracker/templates/users/sign_in.html
+++ b/book_tracker/templates/users/sign_in.html
@@ -5,25 +5,14 @@
     {% endblock %}
 
     {% block content %}
-        <div class="container">
-            <div class="form-sign">
-                <h2 class="roboto-text">Welcome back!</h2>
+                <h2>Welcome back!</h2>
                 <form method="post">
                     {% csrf_token %}
-                    {% if form.errors %}
-                        {% for key,value in errors.items %}
-                            <div class="error-cont"><small class="karla-text">{{ value }}</small></div>
-                        {% endfor %}
-                    {% endif %}
                     {% for field in form %}
-                        <p>
                             <label class="karla-text">{{ field.label }}</label> <br>
                             {{ field }}
-                        </p>
                     {% endfor %}
-                    <button type="submit">Sign In</button>
+                    <input type="submit", value="Sign In">
                 </form>
-                <p class="roboto-text" id="redirect">Are you new here? <br> <a href="{% url 'signup' %}">Get yourself an account!</a> </p>
-            </div>
-        </div>
+                <p>Are you new here? <br> <a href="{% url 'signup' %}">Get yourself an account!</a> </p>
     {% endblock %}
