--- a/book_tracker/templates/books/add_book.html
+++ b/book_tracker/templates/books/add_book.html
@@ -6,17 +6,22 @@
 
 {% block content %}
     <h2>Add Book</h2>
+    <div class="container">
     <form method="post">
         {% csrf_token %}
+        {%for key,value in form.errors.items%}
+            <small class-="text-danger">{{value}}</small>
+        {%endfor%}
         {% for field in form %}
             <p>
-                {{field.label}} <br>
+                <div class="label-cont">{{field.label}}</div> <br>
                 {{field}}
                 {%if field.name == 'authors'%}
-                    <small><a href="{%url 'add_author'%}">Couldn't find the author you need? Add this author to our database!</a></small>
+        <small>Couldn't find the author you need? <span class="bg-warning"><a href="{%url 'add_author'%}">Add this author to our database!</a></span></small>
                 {%endif%}
             </p>
         {% endfor %}
-        <button type="submit">Submit Book</button>
+        <button type="submit" class="btn btn-outline-warning block-btn">Submit Book</button>
     </form>
+    </div>
 {% endblock %}
