--- a/book_tracker/templates/users/sign_in.html
+++ b/book_tracker/templates/users/sign_in.html
@@ -4,15 +4,28 @@
         <title>Sign In</title>
     {% endblock %}
 
+    {%block signout%}
+        <li class="nav_item">
+            <a class="nav-link" href="{%url 'signup'%}">Sign Up</a>
+        </li>
+    {%endblock%}
+
     {% block content %}
-                <h2>Welcome back!</h2>
-                <form method="post">
-                    {% csrf_token %}
-                    {% for field in form %}
-                            <label class="karla-text">{{ field.label }}</label> <br>
-                            {{ field }}
-                    {% endfor %}
-                    <input type="submit", value="Sign In">
-                </form>
-                <p>Are you new here? <br> <a href="{% url 'signup' %}">Get yourself an account!</a> </p>
+        <h2>Welcome back!</h2>
+        <div class="container">
+            <form method="post">
+                {% csrf_token %}
+                {%for key,value in form.errors.items%}
+                    <small class="text-danger">{{value}}</small>
+                {%endfor%}
+                {% for field in form %}
+                    <div class="label-cont">{{ field.label }}</div> <br>
+                        {{ field }}
+                {% endfor %}
+                <button type="submit" class="btn btn-outline-warning block-btn">Sign In</button>
+            </form>
+        </div>
+        <div class="container">
+            <p>Are you new here? <br> <span class="bg-warning"><a href="{% url 'signup' %}">Get yourself an account!</a></span></p>
+        </div>
     {% endblock %}
