password change fixes

--- a/book_tracker/templates/home.html
+++ b/book_tracker/templates/home.html
@@ -2,10 +2,21 @@
 
     {% block head %}
         <title>Homepage</title>
-        <style>
-        </style>
     {% endblock %}
 
     {% block content %}
-
+        <div class="container-fluid">
+        <h2>Welcome to BookTracker!</h2>
+        </div>
+        <div class="container">
+        <p>
+            This app was created to help you track your reading progress. You know those times when you think 'Oh, I should definitely
+            make a mental note to read this book' and a few hours later this note has mysteriously disappeared? Yeah, we can help you
+            with that. And also with tracking progress of your current reading list (which can be a great motivation not to get stuck
+            on that particularly boring chapter of academic book you're reading). <br>
+            You're welcome to add the books you've already read to your 'Have Read' bookshelf and share your opinions on them with others
+            by writing reviews. Let people know what they're getting themselves into! <br>
+            So hurry up, click 'Browse Books' on your navigation bar and get started!
+        </p>
+        </div>
     {% endblock %}
