--- a/book_tracker/templates/profile/change_password.html
+++ b/book_tracker/templates/profile/change_password.html
@@ -5,14 +5,19 @@
     {% endblock %}
 
     {% block content %}
+        <div class="container">
         <form method="post">
+            {%for key, value in form.errors.items%}
+                <small class="text-danger">{{value}}</small>
+            {%endfor%}
             {% csrf_token %}
             {% for field in form %}
-                <p class="karla-text">
-                    {{ field.label_tag }} <br>
+                <p>
+                <div class="label-cont">{{ field.label}}</div> <br>
                     {{ field }}
                 </p>
             {% endfor %}
-        <button type="submit">Submit Changes</button>
+        <button type="submit" class="btn btn-outline-warning block-btn">Submit Changes</button>
         </form>
+        </div>
     {% endblock %}
